# panops-data-registry

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  bulk_trait_maps_import.sh  config.yaml  dvc.yaml  params.yaml  pyproject.toml  setup.py
.dvc/: config
data/canopy_height/: .gitignore  ETH_GlobalCanopyHeightSD_2020_v1.tif.dvc  ETH_GlobalCanopyHeight_2020_v1.tif.dvc  ETH_GlobalCanopyHeight_2020_v1_111km.dvc
data/esa_worldcover/: .gitignore  esa_worldcover_v100_1km.tif.dvc
data/flux/: .gitignore  gomarasca-et-al_2023.dvc
data/gbif/: .gitignore  all_tracheophyta_non-cult_2024-04-10.dvc  gbif_datasets.tsv.dvc
data/landcover/: .gitignore  esa_worldcover_v100_111km.dvc  esa_worldcover_v100_1km.dvc  wwf_terr_biomes.dvc
data/masks/: .gitignore  forest_type_2018.dvc
data/modis/: .gitignore  modis_sur_refl_monthly_avg_111km.dvc  modis_sur_refl_monthly_avg_1km.dvc
data/raw/: .gitignore  gbif.dvc  masks.dvc
data/soilgrids/: .gitignore  bdod_0-5cm_mean.tif.dvc  bdod_100-200cm_mean.tif.dvc  bdod_15-30cm_mean.tif.dvc  bdod_30-60cm_mean.tif.dvc  bdod_5-15cm_mean.tif.dvc  bdod_60-100cm_mean.tif.dvc  cec_0-5cm_mean.tif.dvc  cec_100-200cm_mean.tif.dvc  cec_15-30cm_mean.tif.dvc  cec_30-60cm_mean.tif.dvc  cec_5-15cm_mean.tif.dvc  cec_60-100cm_mean.tif.dvc  cfvo_0-5cm_mean.tif.dvc  cfvo_100-200cm_mean.tif.dvc  cfvo_15-30cm_mean.tif.dvc  cfvo_30-60cm_mean.tif.dvc  cfvo_5-15cm_mean.tif.dvc  cfvo_60-100cm_mean.tif.dvc  clay_0-5cm_mean.tif.dvc  clay_100-200cm_mean.tif.dvc  clay_15-30cm_mean.tif.dvc  clay_30-60cm_mean.tif.dvc  clay_5-15cm_mean.tif.dvc  clay_60-100cm_mean.tif.dvc  nitrogen_0-5cm_mean.tif.dvc  nitrogen_100-200cm_mean.tif.dvc  nitrogen_15-30cm_mean.tif.dvc  nitrogen_30-60cm_mean.tif.dvc  nitrogen_5-15cm_mean.tif.dvc  nitrogen_60-100cm_mean.tif.dvc  ocd_0-5cm_mean.tif.dvc  ocd_100-200cm_mean.tif.dvc  ocd_15-30cm_mean.tif.dvc  ocd_30-60cm_mean.tif.dvc  ocd_5-15cm_mean.tif.dvc  ocd_60-100cm_mean.tif.dvc  ocs_0-30cm_mean.tif.dvc  phh2o_0-5cm_mean.tif.dvc  phh2o_100-200cm_mean.tif.dvc  (+24 more)
data/splot/: .gitignore  sPlotOpen_v76.dvc  splot4-0.dvc
data/topography/: .gitignore  alos_chili_111km.dvc
data/try/: .gitignore  20240506_try_sparse_processing.dvc  TRY_5_GapFilledData_2020.dvc  TRY_6_gapfilled_for_distribution.dvc  (+6 more)
tests/: test_download_data.py
(+151 files in other folders)
