[tool.poetry]
name = "eo-data"
version = "0.1.0"
description = "A registry of Earth observation datasets used in the Geosense lab."
authors = ["Daniel Lusk"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "~3.10"
requests = "^2.31.0"
pygbif = "^0.6.3"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
pytest = "^7.4.4"
pylint = "^3.0.3"
pylint-pytest = "^1.1.7"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
